[hw-2] refactor: Replace in-memory repositories with JPA, improve entity management, update tests